# Geo-Leads-Mailer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  location_search_results.json  manage.py  nginx.conf  pyproject.toml  requirements.txt
app/: config.py  settings.py  web_search.py
app/app/: admin.py  models.py
app/app/migrations/: 0001_initial.py
app/web/: web_search.py
apps/: __init__.py  asgi.py  celery.py  config.py  settings.py  settings_test.py  urls.py  wsgi.py
apps/admin_app/: admin.py  apps.py  models.py
apps/admin_app/migrations/: 0001_initial.py  0002_alter_company_options_alter_searchquery_options_and_more.py  0003_searchquery_result.py  0004_remove_company_industry_remove_company_location_and_more.py  0005_searchquery_user.py  0006_company_query.py  0007_user_country_user_language.py  0008_user_credentials_user_token.py  0009_alter_company_address_alter_company_email_and_more.py  0010_alter_company_website.py  0011_alter_searchquery_accuracy.py
apps/app/: forms.py  tasks.py  urls.py  utils.py  views.py
apps/app/tasks/: __init__.py  tasks_rabbit.py  tasks_redis.py
apps/app/templates/app/: base.html  index.html  login.html  oauth.html  register.html  send_email.html
apps/app/tests/: test_forms.py  test_models.py  test_utils.py  test_views.py
apps/web/: email_crawler.py  mail_extract.py  mail_send.py  web_search.py
results/: Lublin-sklep.json
uploads/8e79383d7dbc46a699dae36b1d5f429d/: client_secret_49393_Pd4XnL3.apps.googleusercontent.com.json
uploads/f4991ad074b04b28b6239fa6152e217c/: token_7235b1a9523544beaf5b9e92d04787f3.json
web/: config.py  mail_extract.py  web_search.py
