[project]
name = "email-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "django>=5.2.4",
    "dotenv>=0.9.9",
    "geocoder>=1.38.1",
    "google-search-results>=2.4.2",
    "osmnx>=2.0.5",
    "overpy>=0.7",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "thefuck>=3.32",
]
